优化Excel读取逻辑，使用Collectors.toList()替代toList()方法